--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -10,49 +10,52 @@
 }
 
 .logoutButton {
-  background-color: red;
+  background-color: #d100009c;
+  color: white;
 }
 
 .submitButton {
-  background-color: green;
+  background-color: rgb(79, 168, 79);
+  color: white;
 }
 
+.studentList {
+  background-color: #218394;
+  color: rgb(255, 255, 255);
+}
+
+.studentList,
 .logoutButton,
 .submitButton,
 .clearButton {
-  border:none;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 1px;
-  color: #ffffff;
-  cursor: pointer;
-  display: block;
-  font-family: -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue",
-    Helvetica, Arial, sans-serif;
-  font-size: 17px;
-  line-height: 100%;
-  margin: 0;
-  outline: 0;
-  padding: 11px 15px 12px;
-  text-align: center;
-  transition: box-shadow 0.05s ease-in-out, opacity 0.05s ease-in-out;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  letter-spacing: 2px;
-}
-
-.logoutButton:hover {
-  box-shadow: rgba(255, 255, 255, 0.3) 0 0 2px inset,
-    rgba(0, 0, 0, 0.4) 0 1px 2px;
-  text-decoration: none;
-  transition-duration: 0.15s, 0.15s;
-}
-
-.logoutButton:active {
-  box-shadow: rgba(0, 0, 0, 0.15) 0 2px 4px inset, rgba(0, 0, 0, 0.4) 0 1px 1px;
+  align-items: center;
+        appearance: none;
+        border-radius: 4px;
+        border-width: 0;
+        box-sizing: border-box;
+        cursor: pointer;
+        display: inline-flex;
+        font-family: "JetBrains Mono",monospace;
+        justify-content: center;
+        line-height: 1;
+        list-style: none;
+        overflow: hidden;
+        text-decoration: none;
+        transition: box-shadow .15s,transform .15s;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+        will-change: box-shadow,transform;
 }
 
 .logoutButton:disabled {
   cursor: not-allowed;
   opacity: 0.6;
+}
+
+.logoutButton:hover,.studentList:hover,
+.submitButton:hover,
+.clearButton:hover {
+  transform: translateY(-2px);
 }
